# stalkr

./: .gitignore  README.md  pyproject.toml
examples/: rfdetr_track_video.py
src/stalkr/: __init__.py  adapters.py  assignment.py  interfaces.py  kalman.py  pipeline.py  tracker.py  types.py  utils.py
tests/: test_tracker.py
