[project]
name = "stalkr"
version = "0.1.0"
description = "Lightweight, pluggable object tracking for video pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Gautam" }
]
dependencies = []

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stalkr"]

[tool.uv]
default-groups = []
